...
                        if isFocused && url == nil {
                            url = URL(string: "https://")
                        }
                    }
                    .disableAutocorrection(true)
                    .textInputAutocapitalization(.never)
                    .accessibilityIdentifier("urlTextField")
                    .keyboardType(.URL)
                }
                if insecureURL {
                    let warningMessage = "⚠️ HTTPS strongly recommend."
                    TextField("", text: Binding(
                            get: { warningMessage },
...
                            DFAnalytics.logServerAddFailed(reason: .invalidURL, scheme: nil)
                        }
                    })
                    {
                        Text("Save")
                    }
                    .accessibilityIdentifier("serverSubmitButton")
                    .disabled(isCheckingServer)
                    .alert(isPresented: $badURL){
                        Alert(title: Text("Invalid URL"), message: Text("Invalid URL format or scheme (http or https).\nExample: https://df.myserver.com"))
                    }
                }
                if items.count > 0 {
...
